# fractal-fields

./: .gitignore  README.rst  pyproject.toml
src/fractal_fields/: __init__.py  grf.py  plotting.py
